--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
                     <div id="instant-options" class="d-none" style="margin-top:15px; border-top:1px solid #eee; padding-top:15px;">
                         <p style="text-align:center; font-weight:600; margin-bottom:10px;">Select Payment Gateway:</p>
                         <div style="display:flex; justify-content:center; gap:20px;">
-                            <img src="https://i.ibb.co/37j5cQJ/bkash-logo.png" style="height:50px; cursor:pointer;" onclick="openGateway('bkash')">
-                            <img src="https://i.ibb.co/6rWj3tL/nagad-logo.png" style="height:50px; cursor:pointer;" onclick="openGateway('nagad')">
+                            <img src="https://iili.io/fIsMcRj.md.jpg" style="height:50px; cursor:pointer;" onclick="openGateway('bkash')">
+                            <img src="https://iili.io/fIsOf99.md.png" style="height:50px; cursor:pointer;" onclick="openGateway('nagad')">
                             <img src="https://seeklogo.com/images/D/dutch-bangla-rocket-logo-B4D1CC458D-seeklogo.com.png" style="height:50px; cursor:pointer;" onclick="openGateway('rocket')">
                         </div>
                     </div>
@@ -1357,4 +1357,5 @@
         window.copyToClipboard = copyToClipboard;
     </script>
 </body>
+
 </html>
