--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
                         <!-- Instant Pay Card -->
                         <div class="method-card" onclick="selectPurchaseMethod('instant')" id="card-instant">
                             <div class="instant-pay-methods">
-                                <img src="https://i.ibb.co/37j5cQJ/bkash-logo.png" class="instant-icon" alt="bKash">
-                                <img src="https://i.ibb.co/6rWj3tL/nagad-logo.png" class="instant-icon" alt="Nagad">
+                                <img src="https://iili.io/fIsMcRj.md.jpg" class="instant-icon" alt="bKash">
+                                <img src="https://iili.io/fIsOf99.md.png" class="instant-icon" alt="Nagad">
                             </div>
                             <div class="method-label" style="margin-top:5px;">Instant Pay</div>
                         </div>
@@ -1359,3 +1359,4 @@
 </body>
 
 </html>
+
