--- a/index.html
+++ b/index.html
@@ -267,7 +267,14 @@
     </style>
 </head>
 <body>
-
+<!-- Fast Top Up X Logo Fix -->
+<meta property="og:image" content="https://fasttopupx.com/logo.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:title" content="Fast Top Up X - Cheapest Free Fire Diamond BD" />
+<meta property="og:description" content="100 Diamond = 68 Tk | Weekly 152 Tk | Monthly 746 Tk | First 50 = Free Bonus" />
+<link rel="icon" href="https://fasttopupx.com/logo.jpg" />
+    
     <!-- Splash Screen -->
     <div id="splash-screen">
         <div id="splash-logo">Loading...</div>
@@ -1359,4 +1366,5 @@
 </body>
 
 </html>
+
 
