--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         .wallet-balance svg { width: 20px; height: 20px; margin-right: 8px; fill: var(--primary-color); }
 
         /* Notice Bar */
-        .notice-bar { background: var(--primary-gradient); color: var(--text-color); padding: 8px 0; font-weight: 500; font-size: 0.9rem; }
+        .notice-bar { background: var(--primary-gradient); color: var(--text-color); padding: 8px 0; font-weight: 500; font-size: 0.9remwhite-space: normal;; }
 
         /* Slider */
         .slider-container { position: relative; max-width: 1200px; margin: 20px auto; border-radius: 12px; overflow: hidden; box-shadow: var(--card-shadow); }
@@ -1361,6 +1361,7 @@
 </body>
 
 </html>
+
 
 
 
