--- a/index.html
+++ b/index.html
@@ -105,7 +105,85 @@
         .wallet-balance svg { width: 20px; height: 20px; margin-right: 8px; fill: var(--primary-color); }
 
         /* Notice Bar */
-        .notice-bar { background: var(--primary-gradient); color: var(--text-color); padding: 8px 0; font-weight: 500; font-size: 0.9remwhite-space: normal;; }
+        <style>
+/* ===== PREMIUM NOTICE BOARD ===== */
+.notice-bar {
+    background: linear-gradient(90deg, #0F1923 0%, #1a1f2e 100%);
+    color: white;
+    padding: 12px 20px;
+    position: relative;
+    overflow: visible;
+    border-left: 5px solid #FF4655;
+    border-radius: 0 8px 8px 0;
+    margin: 10px 0;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+.notice-content {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+.notice-icon {
+    color: #FFD700;
+    font-size: 1.2rem;
+    background: rgba(255, 215, 0, 0.1);
+    padding: 8px;
+    border-radius: 50%;
+}
+.notice-text {
+    flex: 1;
+    font-size: 0.95rem;
+    line-height: 1.5;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: anywhere;
+    max-width: 100%;
+}
+.notice-scrollable {
+    max-height: 120px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
+.notice-scrollable::-webkit-scrollbar {
+    width: 5px;
+}
+.notice-scrollable::-webkit-scrollbar-thumb {
+    background: #FF4655;
+    border-radius: 10px;
+}
+@media (max-width: 768px) {
+    .notice-bar {
+        padding: 10px 15px;
+        margin: 5px 0;
+    }
+    .notice-content {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+    .notice-text {
+        font-size: 0.9rem;
+    }
+}
+</style>
+
+<!-- Premium Notice Board -->
+<div class="notice-bar">
+    <div class="notice-content">
+        <div class="notice-icon">📢</div>
+        <div class="notice-scrollable">
+            <div class="notice-text">
+                <strong>NOTICE:</strong> Fast Top Up X data tool for also bit-out apps. Weekly offers available. 24/7 customer support. Instant delivery guaranteed. Special discounts for first-time users!
+            </div>
+        </div>
+        <div style="color: #aaa; font-size: 0.8rem; white-space: nowrap;">
+            <i class="far fa-clock"></i> Just Now
+        </div>
+    </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 
         /* Slider */
         .slider-container { position: relative; max-width: 1200px; margin: 20px auto; border-radius: 12px; overflow: hidden; box-shadow: var(--card-shadow); }
@@ -1361,6 +1439,7 @@
 </body>
 
 </html>
+
 
 
 
