--- a/index.html
+++ b/index.html
@@ -105,18 +105,8 @@
         .wallet-balance svg { width: 20px; height: 20px; margin-right: 8px; fill: var(--primary-color); }
 
         /* Notice Bar */
-        /* ===== PREMIUM NOTICE BOARD ===== */
-.notice-bar {
-    background: linear-gradient(90deg, #0F1923 0%, #1a1f2e 100%);
-    color: white;
-    padding: 12px 20px;
-    position: relative;
-    overflow: visible;
-    border-left: 5px solid #FF4655;
-    border-radius: 0 8px 8px 0;
-    margin: 10px 0;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-}
+        /* Notice Bar */
+        .notice-bar { background: var(--primary-gradient); color: var(--text-color); padding: 8px 0; font-weight: 500; font-size: 0.9rem; overflow: hidden; }
 
         /* Slider */
         .slider-container { position: relative; max-width: 1200px; margin: 20px auto; border-radius: 12px; overflow: hidden; box-shadow: var(--card-shadow); }
@@ -1372,6 +1362,7 @@
 </body>
 
 </html>
+
 
 
 
