--- a/index.html
+++ b/index.html
@@ -105,8 +105,19 @@
         .wallet-balance svg { width: 20px; height: 20px; margin-right: 8px; fill: var(--primary-color); }
 
         /* Notice Bar */
-        /* Notice Bar */
-        .notice-bar { background: var(--primary-gradient); color: var(--text-color); padding: 8px 0; font-weight: 500; font-size: 0.9rem; overflow: hidden; }
+        .notice-bar { 
+    background: linear-gradient(135deg, #5e2ced, #8a2be2); 
+    color: white; 
+    padding: 12px 15px; 
+    font-weight: 500; 
+    font-size: 0.95rem; 
+    text-align: center; 
+    line-height: 1.5; 
+    position: relative; 
+    z-index: 100; 
+    font-family: 'Hind Siliguri', Arial, sans-serif; 
+    border-bottom: 2px solid rgba(255,255,255,0.1); 
+        }
 
         /* Slider */
         .slider-container { position: relative; max-width: 1200px; margin: 20px auto; border-radius: 12px; overflow: hidden; box-shadow: var(--card-shadow); }
@@ -1362,6 +1373,7 @@
 </body>
 
 </html>
+
 
 
 
