--- a/index.html
+++ b/index.html
@@ -105,51 +105,17 @@
         .wallet-balance svg { width: 20px; height: 20px; margin-right: 8px; fill: var(--primary-color); }
 
         /*Notice Bar*/
-        <!-- Premium Notice Board with CSS -->
-<div class="notice-bar" style="
-    background: linear-gradient(90deg, #0F1923 0%, #1a1f2e 100%);
-    color: white;
-    padding: 12px 20px;
-    border-left: 5px solid #FF4655;
-    border-radius: 0 8px 8px 0;
-    margin: 10px 0;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-">
-    <div style="
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        flex-wrap: wrap;
-    ">
-        <!-- Notice Icon -->
-        <div style="
-            color: #FFD700;
-            font-size: 1.2rem;
-            background: rgba(255, 215, 0, 0.1);
-            padding: 8px;
-            border-radius: 50%;
-        ">
-            📢
-        </div>
-        
-        <!-- Notice Text -->
-        <div style="
-            flex: 1;
-            font-size: 0.95rem;
-            line-height: 1.5;
-            white-space: normal;
-            word-wrap: break-word;
-            max-width: 100%;
-        ">
-            <strong>NOTICE:</strong> Fast Top Up X data tool for also bit-out apps. Weekly offers available. 24/7 customer support. Instant delivery guaranteed. Special discounts for first-time users!
-        </div>
-        
-        <!-- Time -->
-        <div style="color: #aaa; font-size: 0.8rem; white-space: nowrap;">
-            <i class="far fa-clock"></i> Just Now
-        </div>
-    </div>
-</div>
+        .notice-bar { 
+    background: var(--primary-gradient); 
+    color: white; 
+    padding: 10px 15px; 
+    font-weight: 500; 
+    font-size: 0.9rem; 
+    text-align: center;
+    line-height: 1.4;
+    position: relative;
+    z-index: 100;
+        }
 
         /* Slider */
         .slider-container { position: relative; max-width: 1200px; margin: 20px auto; border-radius: 12px; overflow: hidden; box-shadow: var(--card-shadow); }
@@ -1405,6 +1371,7 @@
 </body>
 
 </html>
+
 
 
 
