--- a/index.html
+++ b/index.html
@@ -316,6 +316,35 @@
                     </p>
                     <p class="auth-footer">
                         Don't have an account? <a href="#" class="auth-link" id="show-signup-link">Sign Up</a>
+                        </form>
+<!-- এখানে Google বাটন যোগ করো -->
+<div style="text-align: center; margin: 15px 0;">
+    <div style="display: flex; align-items: center; margin: 20px 0;">
+        <div style="flex: 1; height: 1px; background: #ddd;"></div>
+        <span style="padding: 0 15px; color: #666; font-size: 14px;">OR</span>
+        <div style="flex: 1; height: 1px; background: #ddd;"></div>
+    </div>
+    
+    <button type="button" onclick="googleLogin()" style="
+        background: white;
+        color: #444;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 12px;
+        width: 100%;
+        font-size: 16px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    ">
+        <img src="https://img.icons8.com/color/24/000000/google-logo.png" alt="Google">
+        Continue with Google
+    </button>
+</div>
+<!-- তারপর আগের মতো -->
+<p class="auth-footer">
                     </p>
                 </div>
             </div>
@@ -1530,6 +1559,7 @@
 </body>
 
 </html>
+
 
 
 
