--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                     </div>
                     
                     <ul class="gateway-steps">
-                        <li>1. *247# ডায়াল করে আপনার bKash মোবাইল মেনুতে যান অথবা bKash অ্যাপে যান।</li>
+                        <li>1. Go to your <span id="gateway-step-name">bKash</span> App or dial *247#</li>
                         <li>2. "Send Money" -এ ক্লিক করুন।.</li>
                         <li>3. প্রাপক নম্বর হিসেবে উপরে দেওয়া নম্বরটি লিখুনঃ.</li>
                         <li>4. টাকার পরিমান দিন: <strong><span id="gateway-step-amount"></span></strong></li>
@@ -1533,6 +1533,7 @@
 </body>
 
 </html>
+
 
 
 
