--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                         <span class="gateway-label">Send Money to:</span>
                         <div class="gateway-number-display">
                             <span id="gateway-number">...</span>
-                            <span style="cursor:pointer; color:#555;" <button class="copy-btn" onclick="copyToClipboard('bkash-number')">কপি নাম্বার 📋</span>
+                            <span style="cursor:pointer; color:#555;" onclick="copyToClipboard('gateway-number')">📋</span><button class="copy-btn" onclick="copyToClipboard('bkash-number')">কপি নাম্বার 📋</span>
                         </div>
                     </div>
                     
@@ -1533,6 +1533,7 @@
 </body>
 
 </html>
+
 
 
 
