--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FAST Top-Up</title>
     <meta property="og:image" content="https://iili.io/fTkGh4s.md.png">
 <meta name="twitter:image" content="https://iili.io/fTkGh4s.md.png">
+    <meta name="google-site-verification" content="cBM4IzlINjVDpmM2P4IuRlTBszaPJtrX7nB00EI5OP8" />
     <style>
         /* CSS RESET & FONT */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
