--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAST Top-Up</title>
+    <meta name="description" content="বাংলাদেশের সেরা ফাস্ট টপ-আপ সার্ভিস! Free Fire, BGMI-সহ সব গেমের ডায়মন্ড, UC ও অন্যান্য প্রোডাক্ট কিনুন সবচেয়ে কম দামে ও দ্রুততম সময়ে।">
     <meta property="og:image" content="https://iili.io/fTkGh4s.md.png">
 <meta name="twitter:image" content="https://iili.io/fTkGh4s.md.png">
     <meta name="google-site-verification" content="cBM4IzlINjVDpmM2P4IuRlTBszaPJtrX7nB00EI5OP8" />
