--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <meta name="twitter:image" content="https://iili.io/fTkGh4s.md.png">
     <link rel="canonical" href="https://fasttopupx.com/">
     <meta name="google-site-verification" content="cBM4IzlINjVDpmM2P4IuRlTBszaPJtrX7nB00EI5OP8" />
+    <!-- আপনার বর্তমান কোড ঠিক আছে -->
+<link rel="icon" href="https://iili.io/fMoZ6ps.png" type="image/png">
+<link rel="shortcut icon" href="https://iili.io/fMoZ6ps.png" type="image/png">
+<link rel="apple-touch-icon" href="https://iili.io/fMoZ6ps.png">
+
+<!-- আরও ভালো কম্প্যাটিবিলিটির জন্য এইগুলো যোগ করুন -->
+<!-- 32x32 ফ্যাভিকন (স্ট্যান্ডার্ড) -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://iili.io/fMoZ6ps.png">
+<!-- 16x16 ফ্যাভিকন -->
+<link rel="icon" type="image/png" sizes="16x16" href="https://iili.io/fMoZ6ps.png">
+<!-- অ্যাপল ডিভাইসের জন্য বিভিন্ন সাইজ -->
+<link rel="apple-touch-icon" sizes="180x180" href="https://iili.io/fMoZ6ps.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://iili.io/fMoZ6ps.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://iili.io/fMoZ6ps.png">
     <style>
         /* CSS RESET & FONT */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
